# crat

./: .gitignore  README.md
application/: .bazelrc  .editorconfig  Containerfile  MODULE.bazel
application/client/: BUILD
application/controller/: BUILD  create_person_controller.c
application/domain/: log.h  person.h  product.h
application/log/: log.c
application/patches/libmicrohttpd/: add_build_file.patch  module_dot_bazel.patch
application/server/: BUILD  server.c
