module(name = "crat")

bazel_dep(name = "libmicrohttpd", version = "1.0.1")
bazel_dep(name = "curl", version = "8.4.0")

archive_override(
    module_name = "libmicrohttpd",
    urls = ["https://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-1.0.1.tar.gz"],
    strip_prefix = "libmicrohttpd-1.0.1",
    patches = [
        "//:patches/libmicrohttpd/module_dot_bazel.patch",
        "//:patches/libmicrohttpd/add_build_file.patch",
    ],
    patch_strip = 0,
)
